--- a/INSTALL
+++ b/INSTALL
@@ -10,26 +10,24 @@ for building:
 
 library dependencies:
 * HLHDF library                 0.7.7
+* boost::filesystem		1.38
 * boost::iterator               1.38
 * boost::lexical_cast           1.38
 * boost::smart_ptr              1.38
 * boost::utility                1.38
 * boost::variant                1.38
-* QtCore                        4.5
-* QtSql                         4.5
+* libpqxx			2.6.x
+* libicu			3.6
 
 additional test dependencies:
 * gtest                         1.4.0
 * gmock                         1.4.0
 
 run time dependencies:
-* postgresql driver for qt4-sql
 * postgresql                    8.3
 
 documentation generation dependencies:
 * doxygen
-
-all boost libraries used are header only
 
 
 == generating documentation ==
