--- a/doc/manual.dox
+++ b/doc/manual.dox
@@ -5,13 +5,18 @@
 <ul>
   <li>@ref intro</li>
   <li>@ref setup</li>
-  <li>@ref file_importing</li>
+  <li>@ref file_storing</li>
   <ul>
     <li>@ref file_loading</li>
     <li>@ref file_naming</li>
     <li>@ref file_uniqueness</li>
   </ul>
   <li>@ref querying</li>
+  <ul>
+    <li>@ref querying_files</li>
+    <li>@ref virtual_attributes</li>
+    <li>@ref querying_attributes</li>
+    <li>@ref combine_datetime</li>
   <li>@ref removing</li>
   <li>@ref java_bindings</li>
   <li>@ref java_samples</li>
@@ -19,130 +24,159 @@
 
 @section intro Introduction
 
-baltrad-db is a library for storing the metadata contained in ODIM_H5 files
-in a database and providing queries on the stored metadata.
+baltrad-db is a library for storing ODIM_H5 files in a database and providing
+queries on the file metadata.
+
+The central class is brfc::db::Database (with implementation in
+brfc::db::rdb::RelationalDatabase). This provides access to the database where
+files and metadata are stored.
+
+Another important class is brfc::LocalStorage. This provides access to files in
+the local filesystem and can bring files from database to disk.
+
+These instances of these two core classes are tied together for convenience in
+brfc::FileCatalog.
 
 @section setup Setting Up
 
-The main class for interacting with the library is brfc::FileCatalog.
-It requires that you specify a database connection string and a filesystem
-directory where it will store imported files. The brfc::FileCatalog instance
-created this way uses a brfc::DefaultFileNamer instance for file naming and a
-brfc::oh5::AttributeSpecs instance from brfc::rdb::RelationalDatabase.
-This is a set of ODIM_H5 metadata attributes the library is aware of, any
-attribute encountered and not specified in this set is ignored.
-
-Connection string is specified as a URI, for details, refer to brfc::Database
-documentation.
+The simplest way to get running is just to give a database URI string to
+brfc::FileCatalog, this will create a catalog with brfc::db::RelationalDatabase
+instance, connected to the specified database. It will use brfc::NullStorage as
+node local storage, meaning it will no store the files in the local filesystem,
+just in the database.
 
 @code
 // define database connection
 brfc::String dsn("postgresql://baltrad:baltrad@localhost/baltrad");
-// define a path where FileCatalog will store files
-brfc::String storage_dir("/tmp");
 
-// create a FileCatalog instance, connecting it to database
-// and giving it a storage directory
 try {
-    brfc::FileCatalog fc(dsn, storage_dir);
+    brfc::FileCatalog fc(dsn);
 } catch (const brfc::db_error& e) {
     // problem connecting to database
-} catch (const brfc::fs_error& e) {
-    // problem accessing storage directory
 }
 @endcode
 
-@section file_importing Importing files
+@section file_storing Storing files in the database
 
-Importing a file requires feeding an absolute pathname to
-brfc::FileCatalog::catalog. This method, on success, returns a pointer
-to the brfc::oh5::File instance stored in the database. 
+Importing a file requires feeding an absolute pathname (or a
+brfc::oh5::PhysicalFile instance) to brfc::FileCatalog::store.
+This method, on success, returns a pointer to a brfc::db::FileEntry
+instance. This is the file, as stored in the database.
 
-The procedure for importing the file is as follows:
-@li the file is loaded from the filesystem (@ref file_loading)
-@li a unique identifier is determined (@ref file_uniqueness)
-@li a filename for the file is generated  (@ref file_naming)
-@li the metadata is stored in the database
-@li the file is copied to the storage directory
-
-The assigned path is accessible through brfc::oh5::File::path;
+If you have associated the catalog with a brfc::LocalStorage instance, it will
+be given a chance to "prestore" or cache the file in the local filesystem. This
+might be handy, as the files imported to the database are probably going to get
+used in some way in immediate future. Prestoring them avoids the overhead of
+fetching the file back from the database to local disk (opting to copy it on
+import).
 
 @code
-brfc::FileCatalog fc(dsn, storage_dir);
+brfc::FileCatalog fc(...);
 
-std::shared_ptr<File> file;
+std::shared_ptr<FileEntry> file;
 
 try {
     file = fc.catalog("/path/to/file.h5");
 } catch (const brfc::db_error& e) {
     // problem storing file in database
-} catch (const brfc::fs_error& e) {
-    // opening the file failed or problem storing file on filesystem
 } catch (const brfc::duplicate_entry& e) {
     // file already stored
 }
-
-// absolute path to the stored file
-file->path();
-
-// attributes ignored on loading
-file->ignored_attributes();
-
 @endcode
 
-@subsection file_loading Loading the file from filesystem
+The procedure for importing the file is as follows.
 
-On loading, HDF5 attributes (metadata) are read from file and their values
-are converted using a brfc::oh5::Converter. Attributes that are not recognised
-are left without a value. These attributes can be accessed through
-brfc::oh5::File::ignored_attributes.
-
-Group information is part of the attribute name, so @c /what/date is looked up
-and stored as @c what/date.
-
-@subsection file_uniqueness Determining file uniqueness
-
-See brfc::oh5::File::unique_identifier for now.
-
-@subsection file_naming Naming the file
-
-First the brfc::FileNamer instance is asked to name the file. The database
-keeps track of all the proposed filenames and version numbers assigned to
-those. It is queried for a version number for this name and the result is
-injected into the filename to form a unique filename.
+First, metadata is loaded from the file. Attribute '/what/source' is then
+used to look up a source definition in the database. A hash is calculated
+over the rest of the metadata. The combination of the source and metadata
+hash determines file uniqueness: if such a combo exists, file is taken to
+be already stored. Finally a UUID is generated for the file, the metadata
+and file content are stored in the database.
 
 @section querying Querying
 
-brfc::Query provides an interface for querying the database using attributes.
-You'll probably want to query for files matching certain criteria on an
-attribute, so we'll focus on that. You can get hold of a brfc::Query instance
-using brfc::FileCatalog::query.
+BDB provides two types of queries: a more flexible brfc::db::AttributeQuery
+and a simple way to get brfc::db::FileEntry instances - brfc::db::FileQuery.
 
-For convenience, a factory for creating elements usable in a query is provided
-(brfc::expr::Factory).
+@section querying_files Querying files
 
-File pathname can be queried using a pseudo-attribute named "file:path", this
-is the absolute path of the stored file.
+Lets focus on querying files first. You can get hold of a query instance
+using brfc::FileCatalog::query_file. The simplest thing you can do, is
+get all brfc::db::FileEntry instances stored in the database, this requires
+no work: just create and execute it.
 
-To get an attribute from database, you must mark it for fetching using
-brfc::Query::fetch.
+@code
+// assuming we have a filecatalog instance
+brfc::FileCatalog fc;
 
-To actually run the query, brfc::Query::execute must be called. Granted that no
-hickups were encountered, you'll get back a pointer to a brfc::ResultSet instance
-containing the values of the attributes you requested.
+brfc::db::FileQuery q = fc.query_file();
+shared_ptr<brfc::db::FileResult> r = q.execute();
+
+r->size(); // how many files
+
+// loop through the entries
+shared_ptr<brfc::db::FileEntry> entry;
+while (r->next()) {
+    entry = r->entry();
+    // do something useful
+}
+@endcode
+
+To be more useful, you can add a filter to the query. Filters are composed of
+brfc::expr::Expression elements. The easiest way to create these is using
+brfc::expr::ExpressionFactory. To give an example:
+
+@code
+// create the factory
+brfc::expr::ExpressionFactory xpr;
+
+// create the query
+brfc::AttributeQuery q = fc.query_file();
+q.filter(xpr.eq(xpr.attribute("what/object"), xpr.string("PVOL")));
+@endcode
+
+this filters for all files that have an attribute "what/object" and it
+contains a string "PVOL".
+
+Successive filters can be given, meaning all specified filters must match and
+is equivalent to using operator brfc::expr::Expression::and_ between the filter
+expressions.
+
+@note when you use an attribute in a filter, that attribute @b MUST
+be present in the file metadata. If it's missing, it's not matching and
+is thus ignored completely. There is no way to specifiy a missing value
+yet (so this is a known limitation in current implementation).
+
+@section virtual_attributes Virtual attributes
+
+In addition to standard ODIM_H5 attributes, there are some special attributes.
+They don't really exist in the metadata and require special handling, but they
+are usable in the queries.
+
+Here's a list of them:
+
+  - file\:uuid - universally unique id of the file in database
+  - file\:stored_at - when was the file imported to the database
+  - src:name - the name of the source in database
+  - src:X - source key in database, where X is the source key (PLC, CTY, ...)
+
+@section querying_attributes Querying attributes
+
+Sometimes you will want to query for specific attributes instead of files.
+brfc::db::AttributeQuery enables you to do just that. In addition to filtering,
+you can specify which attributes to fetch from the database. So to query for
+all files in the database, you would do this:
 
 @code
 // assuming we have a filecatalog instance
 brfc::FileCatalog fc;
 // create expression factory
-brfc::expr::Factory xpr;
+brfc::expr::ExpressionFactory xpr;
 
 brfc::Query q = fc.query();
 
-// create "file:path" attribute
-brfc::expr::AttributePtr path = xpr.attribute("file:path");
-// mark it for fetching
-q.fetch(path);
+// mark attribute for fetching
+q.fetch(xpr.attribute("file:uuid"));
 // execute
 shared_ptr<brfc::ResultSet> r = q.execute();
 
@@ -153,105 +187,55 @@ while (r->next()) {
 }
 @endcode
 
-Behind the scenes, an SQL query is created, where attributes are replaced
-with database columns according to what is specified in brfc::AttributeSpec
-entry for the attribute. See @ref query_compilation for details.
-
-Querying for all files is useful, but you probably want to get files with
-certain attributes defined. To achive that, you supply your query with
-filters using brfc::Query::filter. The filter accepts an arbitrary
-brfc::expr::Expression, which you can create using a combination of
-literals, comparison operators and logical operators.
-
-For example, let us fetch all polar volumes before 15.05.2009.
-
-@code
-// assuming a query
-brfc::Query q;
-brfc::expr::Factory xpr;
-
-// give back paths
-q.fetch(xpr.attribute("file:path"));
-// where date < 15.05.2009
-q.filter(xpr.lt(xpr.attribute("what/date"), xpr.date(2009, 5, 15)));
-// where object = PVOL
-q.filter(xpr.eq(xpr.attribute("what/object"), xpr.string("PVOL")));
-
-brfc::ResultSet r = q.execute();
-@endcode
-
-Specifying multiple filters is equivalent to using operator
-brfc::expr::Expression::and_ between the filter expressions.
-
-You could also use 'less than operator' straight from the attribute
-interface like this:
-
-@code
-xpr.attribute("what/date")->lt(xpr.date(2009, 5, 15));
-@endcode
-
-@note that when you use an attribute in a filter, that attribute @b MUST
-be present in the file metadata. If it's missing, it's not matching and
-is thus ignored completely. There is no way to specifiy a missing value
-yet (so this is a known limitation in current implementation).
-
 A problem you might encounter is when a file has the same attribute specified
 in many datasets. You will get as many rows as the number of values for the
 attribute. As in SQL, you can set a query to fetch only distinct rows using
-brfc::Query::distinct.
+brfc::db::AttributeQuery::distinct.
 
+@section combine_datetime combining date and time
 
-Things are a bit trickier when you want to filter by source. A source in
-ODIM_H5 files can contain many attributes. Luckily, when storing the file
-it is associated with one distinct source. But you can query using all the
-possible fields. A source is split to pseudo-attributes with element names
-from ODIM_H5 source specification following 'what/source:'. So WMO becomes
-'what/source:WMO' and so on. There are two groups of sources: radar sites and
-organisations/countries. Their attribute values don't overlap, meaning:
-radar sites have WMO, RAD and PLC specified, while the other group has
-CTY and ORG.
-
-There is one overlapping attribute though, named 'what/source:node', which for
-radar sites is the node value from ODIM_H5 specifiaction Table 9, and
-for countries/organisations the two-letter internet country code. So
-this is present in all sources. Since the radar sources are prefixed with
-the country code, you could query for all country data using the @c like
-operator.
+ODIM_H5 stores date and time values separately, so complex filters are needed
+to accomodate for date changes. There's a more convenient way to handle this
+situation. Add together the date and time attributes. As this is probably quite
+frequently encountered, brfc::expr::ExpressionFactory provides a shorthand just
+for that. Again, an example:
 
 @code
-brfc::expr::Factory xpr;
+brfc::expr::ExpressionFactory xpr;
 
-brfc::Query q = fc.query();
-q.fetch(xpr.attribute("file:path"));
-q.filter(xpr.attribute("what/source:node")->like("se*"));
+brfc::expr::ExpressionPtr x = xpr.combined_datetime("what/date", "what/time");
 
-brfc::ResultSet r = q.execute();
+DateTime now = DateTime::utc_now();
+TimeDelta dt;
+dt.add_minutes(-15);
+DateTime past = now - dt;
+
+// use in filter;
+brfc::db::FileQuery q = fc.query_file();
+q.filter(x->between(past, now));
 @endcode
 
 @section removing Removing files
 
-File removal is done by path name. Just feed a path relative to storage
-root (which you probably get through querying).
+File removal is done using a brfc::db::FileEntry instance, probably attained
+thorugh querying.
 
 for example, removing files older than from 2009.
 @code
 brfc::FileCatalog fc(dsn, storage_dir);
-brfc::expr::Factory xpr;
+brfc::expr::ExpressionFactory xpr;
 
-brfc::Query q = fc.query();
+brfc::db::FileQuery q = fc.query_file();
 
-q.fetch(xpr.attribute("file:path"));
 q.filter(xpr.attribute("what/date")->lt(xpr.date(2009, 1, 1)));
 
-brfc::ResultSet r = q.execute();
+shared_ptr<brfc::db::FileResult> r = q.execute();
 
-while (r.next()) {
+while (r->next()) {
     try {
-        fc.remove(r.get_string(0));
+        fc.remove(r->entry());
     } catch (const brfc::db_error& e) {
         // removing from database failed
-    } catch (const brfc::fs_error& e) {
-        // removing from filesystem failed
     }
 }
 @endcode
@@ -265,48 +249,47 @@ so on).
 
 There are a few differences though:
 
-@li brfc::expr::Factory is mapped to @c eu.baltrad.fc.expr.ExpressionFactory
-@li brfc::expr::Attribute is mapped to @c eu.baltrad.fc.expr.AttributeExpr
 @li brfc::brfc_error is mapped to @c eu.baltrad.fc.FileCatalogError
 @li brfc::fs_error is mapped to @c eu.baltrad.fc.FileSystemError
 @li brfc::db_error is mapped to @c eu.baltrad.fc.DatabaseError
 @li brfc::lookup_error is mapped to @c eu.baltrad.fc.LookupError
 @li brfc::duplicate_entry is mapped to @c eu.baltrad.fc.DuplicateEntry
 
-
 @section java_samples Sample Java code
 
 Querying:
 
 @code
+import eu.baltrad.fc.FileCatalog;
+import eu.baltrad.fc.db.FileEntry;
+import eu.baltrad.fc.db.FileQuery;
+import eu.baltrad.fc.expr.ExpressionFactory;
+
 // setting up
 String dsn("postgresql://baltrad:baltrad@localhost/baltrad");
-String storage_dir("/tmp");
-Filecatalog fc;
+FileCatalog fc;
 
 try {
-    fc = new FileCatalog(dsn, storage_dir);
+    fc = new FileCatalog(dsn);
 } catch (DatabaseError e) {
     // problem connecting to database
-} catch (FileSytemError e) {
-    // problem accessing storage directory
 }
 
 // querying
 ExpressionFactory xpr;
 
-Query q = fc.query_path();
+FileQuery q = fc.query_file();
 q.filter(xpr.attribute("what/source:node").eq(xpr.string("seang"));
 
 // execute
-ResultSet r = q.execute();
+FileResult r = q.execute();
 
 // loop through results
 while (r.next()) {
     // access the values
-    String path = r.string(0);
+    FileEntry e = r.entry();
 }
 @endcode
 
 */
-// vim:filetype=doxygen:et:ts=4:sw=4:
+// vim:filetype=doxygen:et:ts=4:sw=4:tw=79
