Ticket 214: update installation documentation in INSTALL

--- a/INSTALL
+++ b/INSTALL
@@ -2,23 +2,32 @@
 
 Note that the version numbers supplied here are those
 used in developing the library, you might get away with
-lower version numbers in some cases (i.e boost dependencies
-are probably of version 1.37). 
+lower version numbers in some cases.
 
 for building:
 * python 2.4+
 
 library dependencies:
 * HLHDF library                 0.7.7
-* boost::bimap			1.38
-* boost::filesystem             1.38
-* boost::iterator               1.38
-* boost::lexical_cast           1.38
-* boost::smart_ptr              1.38
-* boost::utility                1.38
-* boost::variant                1.38
+* boost::filesystem             1.40
+* boost::foreach                1.40
+* boost::iterator               1.40
+* boost::lexical_cast           1.40
+* boost::mpl                    1.40
+* boost::multi_index            1.40
+* boost::program_options        1.40
+* boost::ptr_container		1.40
+* boost::smart_ptr              1.40
+* boost::sting_algo             1.40
+* boost::thread                 1.40
+* boost::timer                  1.40
+* boost::utility                1.40
+* boost::uuid                   1.43    (included in ./src)
+* boost::variant                1.40
+* boost::xpressive              1.40
 * libpqxx                       2.6.x
-* libicu                        3.6
+* libfuse                       2.7.x   (optional)
+* utf8-cpp                      2.3     (included in ./src)
 
 additional test dependencies:
 * gtest                         1.4.0
@@ -65,6 +74,8 @@ Just to give an example:
                    --test_db_dsn=postgresql://baltrad:baltrad@localhost/baltrad 
  $ ./waf build
 
+as can be seen from the dependencies, boost libraries are heavily used, so the
+build times can be quite long.
 
 == running unit tests ==
 
